Fixed Overflow

--- a/style.css
+++ b/style.css
@@ -913,7 +913,7 @@ dialog::backdrop {
   }
 
   h1 {
-    font-size: clamp(3.5rem, 18vw, 4rem);
+    font-size: clamp(2.8rem, 13vw, 4rem);
   }
 
   .hero-panel,
